Fix test file